--- a/Task3/index.html
+++ b/Task3/index.html
@@ -26,7 +26,7 @@
                 <div class="card-body">
                   <p>
                     <ul class="text-center me-5">
-                      <li>Aida dere</li>
+                      <li>Aida derare</li>
                       <li>Nec fergut nisi</li>
                       <li>Nulla mama basefrdr</li>
                       <li class="text-decoration-line-through">Phars masje</li>
