--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="css/reset.css">
     <link rel="stylesheet"  href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
@@ -12,53 +11,85 @@
     <title>NINESTARS</title>
 </head>
 <body>
-<!-----header section---->
-<section class="header navbar navbar-expand-lg navbar-light bg-light p-4">
-  <div class="container">
-	<div class="head-logo">
-		<a class="navbar-brand" href="#">Ninestars</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
-	</div>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link active" aria-current="page" href="#">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">About Us</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Service</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Portfolio</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Team</a>
-			</li>
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				Dropdown Down
-				</a>
-				<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-					<li><a class="dropdown-item" href="#">Action</a></li>
-					<li><a class="dropdown-item" href="#">Another action</a></li>
-					<li><a class="dropdown-item" href="#">Something else here</a></li>
+<!-----header-nav section---->
+<header-nav>
+	<nav class="navbar navbar-expand-lg navbar-light bg-white shadow p-3 ">
+		<div class="container">
+			<a class="nav-logo 	navbar-brand fs-2" href="#">Ninestars</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			   
+			<div class="nav-con collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+				<ul class="navbar-nav fs-5">
+					<li class="nav-item px-1">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item px-1">
+						<a class="nav-link" href="#">AboutUs</a>
+					</li>
+					<li class="nav-item px-1">
+						<a class="nav-link" href="#">Service</a>
+					</li>
+					<li class="nav-item px-1">
+						<a class="nav-link" href="#">Portfolio</a>
+					</li>
+					<li class="nav-item px-1">
+						<a class="nav-link" href="#">Team</a>
+					</li>
+					<li class="nav-item dropdown px-1">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Dropdown Down
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<li><a class="dropdown-item" href="#">Action</a></li>
+							<li><a class="dropdown-item" href="#">Another action</a></li>
+							<li><a class="dropdown-item" href="#">Something else here</a></li>
+						</ul>
+						</li>
+					<li class="nav-item px-1">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+					<li class="nav-item px-1">
+						<input class="btn btn-primary rounded-pill" type="submit" value="Get Started">
+					</li>
 				</ul>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Contact</a>
-			</li>
-			<li class="nav-item">
-				<input class="btn btn-primary rounded-pill" type="submit" value="Get Started">
-			</li>
-		</ul>
-    </div>
-  </div>
+			</div>  
+		</div>
+	</nav>
+</header-nav>	  
+<!--banner section--->
+<section id="ban" class="banner">
+	<div class="container">
+		<div class="row py-5">
+			<div class="row banner-content col-sm-12 col-md-12 col-lg-6 order-1 order-lg-0 py-4">
+				<h1>Bettter digital experience with Ninestars</h1>
+				<p>We are team of talented designers making websites with Bootstrap</p>
+				<div class="banner-button">
+					<input class="ban-but btn btn-primary" type="submit" value="Get Started">
+				</div>
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-6 order-0 order-lg-1 py-4">
+				<div class="row banner-image">
+					<img src="image/hero-img.svg">
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
-
+<!---about us--->
+<section class="about">
+	<div class="container">
+		<div class="row">
+			<div class=" about-image col-sm-12 col-md-12 col-lg-6">
+			
+			</div>
+			<div class=" about-content col-sm-12 col-md-12 col-lg-6">
+			
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
@@ -69,6 +100,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
 </body>
 </html>
