--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+	<script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>NINESTARS</title>
 </head>
 <body>
 <!-----header-nav section---->
-<header-nav>
-	<nav class="navbar navbar-expand-lg navbar-light bg-white shadow p-3 ">
-		<div class="container">
+<header class=" container-fluid position-fixed" style="padding:0">
+	<nav class="navbar navbar-expand-lg navbar-light bg-white shadow p-2">
+		<div class="container">	
 			<a class="nav-logo 	navbar-brand fs-2" href="#">Ninestars</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -57,35 +58,52 @@
 			</div>  
 		</div>
 	</nav>
-</header-nav>	  
+</header>	  
 <!--banner section--->
-<section id="ban" class="banner">
+<section id="ban" class="banner pt-5">
 	<div class="container">
 		<div class="row py-5">
-			<div class="row banner-content col-sm-12 col-md-12 col-lg-6 order-1 order-lg-0 py-4">
+			<div class="row banner-content col-sm-12 col-md-12 col-lg-6 order-1 order-lg-0 pt-2">
 				<h1>Bettter digital experience with Ninestars</h1>
 				<p>We are team of talented designers making websites with Bootstrap</p>
 				<div class="banner-button">
 					<input class="ban-but btn btn-primary" type="submit" value="Get Started">
 				</div>
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-6 order-0 order-lg-1 py-4">
+			<div class="col-sm-12 col-md-12 col-lg-6 order-0 order-lg-1 pt-2">
 				<div class="row banner-image">
-					<img src="image/hero-img.svg">
+					<img src="image/hero-img.svg" class="animated">
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
 <!---about us--->
-<section class="about">
+<section id="abo" class="about">
 	<div class="container">
-		<div class="row">
+		<div class="row g-5">
 			<div class=" about-image col-sm-12 col-md-12 col-lg-6">
-			
+				<div class="row about-image px-5">
+					<img src="image/about-img.svg">
+				</div>
 			</div>
 			<div class=" about-content col-sm-12 col-md-12 col-lg-6">
-			
+				<div class="col-12">
+					<h1 class="pe-5 fw-bolder">Voluptatem dignissimos provident quasi</h1>	
+					<p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
+				</div>
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-6">
+						<iconify-icon icon="bx:receipt"></iconify-icon>
+						<h4 class="fw-bolder">Corporis voluptates sit</h4>
+						<p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-6">
+						<iconify-icon icon="bx:cube"></iconify-icon>
+						<h4 class="fw-bolder">Ullamco laboris nisi</h4>
+						<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
