--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -108,7 +108,40 @@
 		</div>
 	</div>
 </section>
-
+<!---service section---->
+<section class="service py-5" id="ba-color">
+	<div class="container">
+		<div class="row mb-5">
+			<div class="col text-center">
+				<h4 class="fw-4 text-black-50">Services</h4>
+				<p class="h2">Check out the great services we offer</p>
+			</div>
+		</div>
+		
+		<div class="row g=5">
+			<div class="col bg-white me-5 shadow imig1 p-4">
+				<p class="fs-1"id="bg-icon"><i class="bi bi-speedometer2"></i></p>
+				<p class="fw-bold fs-5">Magni Dolores</p>
+				<p class="">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
+			</div>
+			<div class="col bg-white me-5 shadow imig1 p-4">
+				<p class="fs-1"id="bg-icon"><i class="bi bi-file-earmark-text"></i></p>
+				<p class="fw-bold fs-5">Sed ut perspiciatis</p>
+				<p class="">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
+			</div>
+			<div class="col bg-white me-5 shadow imig1 p-4">
+				<p class="fs-1"id="bg-icon"><i class="bi bi-speedometer2"></i></p>
+				<p class="fw-bold fs-5">Magni Dolores</p>
+				<p class="">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
+			</div>
+			<div class="col bg-white me-5 shadow imig1 p-4">
+				<p class="fs-1"id="bg-icon"><i class="bi bi-globe2"></i></p>
+				<p class="fw-bold fs-5">Nemo Enim</p>
+				<p class="">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
