--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="css/style.css">
+	<link rel="stylesheet"  href="css/boxicons/css/boxicons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
@@ -13,139 +14,156 @@
 </head>
 <body>
 <!-----header-nav section---->
-<header class=" container-fluid position-fixed" style="padding:0">
-	<nav class="navbar navbar-expand-lg navbar-light bg-white shadow p-2">
-		<div class="container">	
-			<a class="nav-logo 	navbar-brand fs-2" href="#">Ninestars</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-			</button>
-			   
-			<div class="nav-con collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-				<ul class="navbar-nav fs-5">
-					<li class="nav-item px-1">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
-					</li>
-					<li class="nav-item px-1">
-						<a class="nav-link" href="#">AboutUs</a>
-					</li>
-					<li class="nav-item px-1">
-						<a class="nav-link" href="#">Service</a>
-					</li>
-					<li class="nav-item px-1">
-						<a class="nav-link" href="#">Portfolio</a>
-					</li>
-					<li class="nav-item px-1">
-						<a class="nav-link" href="#">Team</a>
-					</li>
-					<li class="nav-item dropdown px-1">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-						Dropdown Down
-						</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<li><a class="dropdown-item" href="#">Action</a></li>
-							<li><a class="dropdown-item" href="#">Another action</a></li>
-							<li><a class="dropdown-item" href="#">Something else here</a></li>
-						</ul>
+<header id="hed" class="container-fluid fixed-top">
+	<div class="row">
+		<nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-center py-2 shadow	 p-2">
+			<div class="container">
+				<a class="navbar-brand fs-3" href="#">Ninestars</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+				
+				<div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item px-1">
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
 						</li>
-					<li class="nav-item px-1">
-						<a class="nav-link" href="#">Contact</a>
-					</li>
-					<li class="nav-item px-1">
-						<input class="btn btn-primary rounded-pill" type="submit" value="Get Started">
-					</li>
-				</ul>
-			</div>  
-		</div>
-	</nav>
-</header>	  
-<!--banner section--->
-<section id="ban" class="banner pt-5">
-	<div class="container">
-		<div class="row py-5">
-			<div class="row banner-content col-sm-12 col-md-12 col-lg-6 order-1 order-lg-0 pt-2">
-				<h1>Bettter digital experience with Ninestars</h1>
-				<p>We are team of talented designers making websites with Bootstrap</p>
-				<div class="banner-button">
-					<input class="ban-but btn btn-primary" type="submit" value="Get Started">
+						<li class="nav-item px-1">
+							<a class="nav-link" href="#">About us</a>
+						</li>
+						<li class="nav-item px-1">
+							<a class="nav-link" href="#">Services</a>
+						</li>
+						<li class="nav-item px-1">
+							<a class="nav-link" href="#">Portfolio</a>
+						</li>
+						<li class="nav-item px-1">
+							<a class="nav-link" href="#">Team</a>
+						</li>
+						<li class="nav-item dropdown px-1">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown link</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="dropdown-item" href="#">Action</a></li>
+								<li><a class="dropdown-item" href="#">Another action</a></li>
+								<li><a class="dropdown-item" href="#">Something else here</a></li>
+							</ul>
+						</li>
+						<li class="nav-item px-2">
+							<a class="nav-link" href="#">Contact</a>
+						</li>
+						<button type="button" class="btn btn-primary rounded-pill px-4">Get Started</button>
+					</ul>
 				</div>
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-6 order-0 order-lg-1 pt-2">
-				<div class="row banner-image">
-					<img src="image/hero-img.svg" class="animated">
+		</nav>
+	</div>
+</header>
+<!---banner section---->
+<section id="caro" class="banner d-flex justify-content-center align-items-center">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-sm-12 col-md-12 col-lg-6 order-1 order-lg-0 justify-content-center align-items-center px-3">
+				<div class="row">
+					<h1>Bettter digital experience with Ninestars</h1>
+					<h2>We are team of talented designers making websites with Bootstrap</h2>
+				</div>
+				<div>
+					<button type="button" class="btn btn-primary">Get Started</button>
+				</div>
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-6 order-0 order-lg-1 px-4">
+				<div class="row">
+					<img src="image/hero-img.svg">
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<!---about us--->
-<section id="abo" class="about">
+<!---about section--->
+<section id="abt"class="about">
 	<div class="container">
-		<div class="row g-5">
-			<div class=" about-image col-sm-12 col-md-12 col-lg-6">
-				<div class="row about-image px-5">
+		<div class="abt-flex row align-items-center">
+			<div class="col-sm-12 col-md-12 col-lg-6 justify-content-center align-items-center">
+				<div class="row">
 					<img src="image/about-img.svg">
 				</div>
 			</div>
-			<div class=" about-content col-sm-12 col-md-12 col-lg-6">
-				<div class="col-12">
-					<h1 class="pe-5 fw-bolder">Voluptatem dignissimos provident quasi</h1>	
-					<p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
-				</div>
+			<div class="col-sm-12 col-md-12 col-lg-6 pt-2">
+				<h1>Voluptatem dignissimos provident quasi</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit </p>
 				<div class="row">
 					<div class="col-sm-12 col-md-6 col-lg-6">
-						<iconify-icon icon="bx:receipt"></iconify-icon>
-						<h4 class="fw-bolder">Corporis voluptates sit</h4>
+						<i class="bx bx-receipt"></i>
+						<h4>Corporis voluptates sit</h4>
 						<p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-6">
-						<iconify-icon icon="bx:cube"></iconify-icon>
-						<h4 class="fw-bolder">Ullamco laboris nisi</h4>
-						<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+						<div class="abt-ico">
+							<i class="bx bx-cube-alt"></i>
+							<h4>Ullamco laboris nisi</h4>
+							<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<!---service section---->
-<section class="service py-5" id="ba-color">
+<!--service section-->
+<section id="service" class="ser">
 	<div class="container">
-		<div class="row mb-5">
-			<div class="col text-center">
-				<h4 class="fw-4 text-black-50">Services</h4>
-				<p class="h2">Check out the great services we offer</p>
-			</div>
+		<div class="row align-items-center text-center">
+			<h3>Services</h3>
+			<h2>Check out the great services we offer</h2>
 		</div>
-		
-		<div class="row g=5">
-			<div class="col bg-white me-5 shadow imig1 p-4">
-				<p class="fs-1"id="bg-icon"><i class="bi bi-speedometer2"></i></p>
-				<p class="fw-bold fs-5">Magni Dolores</p>
-				<p class="">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
+		<div class="row mt-5">
+			<div class="col-12 col-md-6 col-lg-3">
+				<div class="ser-car card text-center shadow mb-5 bg-body">
+					<div class="card-title">
+						<i class="bx bxl-dribbble"></i>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">Lorem Ipsum</h5>
+						<p class="card-text">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+					</div>
+				</div>
 			</div>
-			<div class="col bg-white me-5 shadow imig1 p-4">
-				<p class="fs-1"id="bg-icon"><i class="bi bi-file-earmark-text"></i></p>
-				<p class="fw-bold fs-5">Sed ut perspiciatis</p>
-				<p class="">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
+			<div class="col-12 col-md-6 col-lg-3">
+				<div class="ser-car card text-center shadow  mb-5 bg-body">
+					<div class="card-title">
+						<i class="bx bx-file"></i>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">Sed ut perspiciatis</h5>
+						<p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
+					</div>
+				</div>
 			</div>
-			<div class="col bg-white me-5 shadow imig1 p-4">
-				<p class="fs-1"id="bg-icon"><i class="bi bi-speedometer2"></i></p>
-				<p class="fw-bold fs-5">Magni Dolores</p>
-				<p class="">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
+			<div class="col-12 col-md-6 col-lg-3">
+				<div class="ser-car card text-center shadow  mb-5 bg-body">
+					<div class="card-title">
+						<i class="bx bx-tachometer"></i>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">Magni Dolores</h5>
+						<p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
+					</div>
+				</div>
 			</div>
-			<div class="col bg-white me-5 shadow imig1 p-4">
-				<p class="fs-1"id="bg-icon"><i class="bi bi-globe2"></i></p>
-				<p class="fw-bold fs-5">Nemo Enim</p>
-				<p class="">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
+			<div class="col-12 col-md-6 col-lg-3">
+				<div class="ser-car card  text-center shadow  mb-5 bg-body">
+					<div class="card-title">
+						<i class="bx bx-world"></i>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">Nemo Enim</h5>
+						<p class="card-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </section>
-
-
-
-
 
 
 
