--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet"  href="css/reset.css">
     <link rel="stylesheet"  href="css/style.css">
 	<link rel="stylesheet"  href="css/boxicons/css/boxicons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -112,11 +113,11 @@
 <!--service section-->
 <section id="service" class="ser">
 	<div class="container">
-		<div class="row align-items-center text-center">
+		<div class="row align-items-center text-center mb-5">
 			<h3>Services</h3>
 			<h2>Check out the great services we offer</h2>
 		</div>
-		<div class="row mt-5">
+		<div class="row ">
 			<div class="col-12 col-md-6 col-lg-3">
 				<div class="ser-car card text-center shadow mb-5 bg-body">
 					<div class="card-title">
@@ -128,7 +129,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-12 col-md-6 col-lg-3">
+			<div class="col-12 col-md-6 col-lg-3 ">
 				<div class="ser-car card text-center shadow  mb-5 bg-body">
 					<div class="card-title">
 						<i class="bx bx-file"></i>
@@ -164,6 +165,325 @@
 		</div>
 	</div>
 </section>
+<!--portfolio section-->
+<section class="portfolio" id="port">
+	<div class="container">
+		<div class="row align-items-center text-center">
+			<h3>Services</h3>
+			<h2>Check out the great services we offer</h2>
+		</div>
+		
+		<div class="row">
+			<ul class="d-flex justify-content-center text-align-center text-decoration-none mt-5 port-sec">
+				<li class="px-2 active"><h5>All</h5></li>
+				<li class="px-2"><h5>App</h5></li>
+				<li class="px-2"><h5>Card</h5></li>
+				<li class="px-2"><h5>Web</h5></li>
+			</ul>
+		</div>
+		
+		<div class="row port-row">
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-1.jpg">
+					</div>
+					<div class="port-body ">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-2.jpg">
+					</div>
+					<div class="port-body">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-3.jpg">
+					</div>
+					<div class="port-body">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-4.jpg">
+					</div>
+					<div class="port-body">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-5.jpg">
+					</div>
+					<div class="port-body">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-6.jpg">
+					</div>
+					<div class="port-body">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-7.jpg">
+					</div>
+					<div class="port-body">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-8.jpg">
+					</div>
+					<div class="port-body">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4 mt-5">
+				<div class="row">
+					<div class="port-image row">
+						<img src="image/portfolio-9.jpg">
+					</div>
+					<div class="port-body">
+						<i class="bx bx-world"></i>
+						<i class="bx bx-world"></i>
+						<h5>App 1</h5>
+						<p>App</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<!---question section--->
+<section class="question" id="question">
+	<div class="container">
+		<div class="row question-title align-items-center text-center">
+			<h3>F.A.Q</h3>
+			<h2>Frequently Asked Questions</h2>
+		</div>
+		<div class="accordion mt-5" id="accordionExample">
+			<div class="accordion-item border-top-0 border-start-0 border-end-0">
+				<h2 class="accordion-header" id="headingOne">
+					<button class="accordion-button collapsed question-button fw-bold fs-5 " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Non consectetur a erat nam at lectus urna duis?</button>
+				</h2>
+				<div id="collapseOne" class="accordion-collapse collapse show question-button" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+						<p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item border-top-0 border-start-0 border-end-0">
+				<h2 class="accordion-header" id="headingTwo">
+					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target=	"#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</button>
+				</h2>
+				<div id="collapseTwo" class="accordion-collapse collapse question-button" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+						<p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item border-top-0 border-start-0 border-end-0">
+				<h2 class="accordion-header" id="headingThree">
+					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?</button>
+				</h2>
+				<div id="collapseThree" class="accordion-collapse collapse question-button" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+						<p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item border-top-0 border-start-0 border-end-0">
+				<h2 class="accordion-header" id="headingThree">
+					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</button>
+				</h2>
+				<div id="collapseThree" class="accordion-collapse collapse question-button" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+						<p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item border-top-0 border-start-0 border-end-0">
+				<h2 class="accordion-header" id="headingThree">
+					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</button>
+				</h2>
+				<div id="collapseThree" class="accordion-collapse collapse question-button" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+						<p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item border-top-0 border-start-0 border-end-0">
+				<h2 class="accordion-header" id="headingThree">
+					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor?</button>
+				</h2>
+				<div id="collapseThree" class="accordion-collapse collapse question-button" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+					<div class="accordion-body">
+						<p>Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<!---team section--->
+<section class="team" id="team">
+	<div class="container">
+		<div class="row team-title align-items-center text-center">
+			<h3>F.A.Q</h3>
+			<h2>Frequently Asked Questions</h2>
+		</div>
+		
+		<div class="row my-5">
+			<div class="col-12 col-md-6 col-lg-3">
+				<div class="row member">
+					<img src="image/team-1.jpg">
+					<div class="member-info">
+						<h4>Walter White</h4>
+						<span>Chief Executive Officer</span>
+					</div>
+					<div class="member-social">
+						<i class="bi bi-twitter"></i>
+						<i class="bi bi-facebook"></i>
+						<i class="bi bi-instagram"></i>
+						<i class="bi bi-linkedin"></i>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-3">
+				<div class="row member">
+					<img src="image/team-2.jpg">
+					<div class="member-info">
+						<h4>Sarah Jhonson</h4>
+						<span>Product Manager</span>
+					</div>
+					<div class="member-social">
+						<i class="bi bi-twitter"></i>
+						<i class="bi bi-facebook"></i>
+						<i class="bi bi-instagram"></i>
+						<i class="bi bi-linkedin"></i>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-3">
+				<div class="row member">
+					<img src="image/team-3.jpg">
+					<div class="member-info">
+						<h4>William Anderson</h4>
+						<span>CTO</span>
+					</div>
+					<div class="member-social">
+						<i class="bi bi-twitter"></i>
+						<i class="bi bi-facebook"></i>
+						<i class="bi bi-instagram"></i>
+						<i class="bi bi-linkedin"></i>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-3">
+				<div class="row member">
+					<img src="image/team-4.jpg">
+					<div class="member-info">
+						<h4>Amanda Jepson</h4>
+						<span>Accountant</span>
+					</div>
+					<div class="member-social">
+						<i class="bi bi-twitter"></i>
+						<i class="bi bi-facebook"></i>
+						<i class="bi bi-instagram"></i>
+						<i class="bi bi-linkedin"></i>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<!---clients---->
+<section class="clients" id="clients">
+	<div class="container">
+		<div class="row clients-title align-items-center text-center">
+			<h3>Clients</h3>
+			<h2>They trusted us</h2>
+		</div>
+		
+		
+		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+			  <div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			  </div>
+			  <div class="carousel-inner">
+				<div class="carousel-item active">
+				  <img src="image/team-4.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+				  <img src="image/team-4.jpg" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+				  <img src="image/team-4.jpg" class="d-block w-100" alt="...">
+				</div>
+			  </div>
+			  
+			</div>
+		
+		
+	</div>
+</section>
+
+
+
+
+
+
 
 
 
