--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -382,13 +382,15 @@
 			<h2>Frequently Asked Questions</h2>
 		</div>
 		
-		<div class="row my-5">
+		<div class="row my-5 g-5 justify-content-center">
 			<div class="col-12 col-md-6 col-lg-3">
 				<div class="row member">
 					<img src="image/team-1.jpg">
 					<div class="member-info">
-						<h4>Walter White</h4>
-						<span>Chief Executive Officer</span>
+						<div class="member-info-content">
+							<h5>Walter White</h5>
+							<span class="fst-italic">Chief Executive Officer</span>
+						</div>
 					</div>
 					<div class="member-social">
 						<i class="bi bi-twitter"></i>
@@ -402,8 +404,10 @@
 				<div class="row member">
 					<img src="image/team-2.jpg">
 					<div class="member-info">
-						<h4>Sarah Jhonson</h4>
-						<span>Product Manager</span>
+						<div class="member-info-content">
+							<h5>Sarah Jhonson</h5>
+							<span class="fst-italic">Product Manager</span>
+						</div>
 					</div>
 					<div class="member-social">
 						<i class="bi bi-twitter"></i>
@@ -417,8 +421,10 @@
 				<div class="row member">
 					<img src="image/team-3.jpg">
 					<div class="member-info">
-						<h4>William Anderson</h4>
-						<span>CTO</span>
+						<div class="member-info-content">
+							<h5>William Anderson</h5>
+							<span class="fst-italic">CTO</span>
+						</div>
 					</div>
 					<div class="member-social">
 						<i class="bi bi-twitter"></i>
@@ -432,8 +438,10 @@
 				<div class="row member">
 					<img src="image/team-4.jpg">
 					<div class="member-info">
-						<h4>Amanda Jepson</h4>
-						<span>Accountant</span>
+						<div class="member-info-content">
+							<h5>Amanda Jepson</h5>
+							<span class="fst-italic">Accountant</span>
+						</div>
 					</div>
 					<div class="member-social">
 						<i class="bi bi-twitter"></i>
